# kinesis-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
gamefiles/: main.cpp
kinesis/: GUI.cpp  GUI.h  buffer.cpp  buffer.h  camera.cpp  camera.h  gameobject.h  gbuffer.cpp  gbuffer.h  hash.h  keyboard_controller.cpp  keyboard_controller.h  kinesis.cpp  kinesis.h  model.cpp  model.h  pipeline.cpp  pipeline.h  renderer.cpp  renderer.h  rendersystem.cpp  rendersystem.h  spectral_distribution.cpp  spectral_distribution.h  swapchain.cpp  swapchain.h  transform.h  window.cpp  window.h
kinesis/assets/models/: bunny.mtl  cornell.mtl
kinesis/assets/shaders/: CMakeLists.txt  compositing.frag  compositing.vert  gbuffer.frag  gbuffer.vert  raytrace.rchit  raytrace.rgen  raytrace.rmiss  simple_shader.frag  simple_shader.vert  skybox.glsl
kinesis/math/: math.h  matrix.cpp  matrix.h  quaternion.h  vectors.h
kinesis/mesh/: boundingbox.h  camera.cpp  camera.h  edge.h  material.cpp  material.h  mesh.cpp  mesh.h  triangle.cpp  triangle.h  vertex.h
kinesis/raytracer/: hit.h  ray.h  raytracer.cpp  raytracer.h  raytracermanager.cpp  raytracermanager.h
kinesis/tools/: shader_compile.py
src/: main.cpp
